# blobtk

./: .bumpversion.cfg  AUTHORS  README.md  bump_version.sh  update_wiki.sh
.github/workflows/: CI.yml  cargo.yml  check.yml  close-issues.yml  conda-release.yml  release-blobtk.yml  release-core.yml  release.yml
conda/: build.sh  conda_build_config.yaml  meta.yaml  run_test.py
rust/: Cargo.toml  Dockerfile  bump_version.sh  deny.toml  pyproject.toml
rust/src/: bam.rs  blobdir.rs  cli.rs  depth.rs  error.rs  fasta.rs  fastq.rs  filter.rs  index.rs  io.rs  lib.rs  main.rs  parse.rs  plot.rs  python.rs  run.rs  snail.rs  taxonomy.rs  utils.rs
rust/src/plot/: axis.rs  blob.rs  category.rs  chart.rs  component.rs  cumulative.rs  data.rs  plot_data.rs  scatter.rs  snail.rs  style.rs
rust/src/python/: depth.rs  filter.rs  plot.rs  utils.rs
rust/src/taxonomy/: lookup.rs  ncbi.rs  parse.rs
rust/test/: depth.py  filter.py  integration.sh  minimal.fa  pytest.1000.bed  pytest.bed  test.py
rust/test/genomehubs/: ATTR_genome_size.types.yaml  ATTR_karyotype.types.yaml  apidae.tsv  sample.types.yaml
rust/test/minimal/: gc.json  identifiers.json  length.json  meta.json  ncount.json
rust/test/ncbi_taxdump/: names.dmp
rust/test/taxonomy/: README.md  config.yaml  config_all.yaml  config_canidae.yaml  config_metazoa.yaml
rust/test/taxonomy/canidae/ena/: ena-taxonomy.extra.jsonl
rust/test/taxonomy/canidae/gbif/: names.dmp  nodes.dmp
rust/test/taxonomy/canidae/ncbi/: names.dmp  nodes.dmp
rust/test/taxonomy/gbif_backbone/: simple.txt
