[package]
name = "blobtk"
version = "0.2.4"
edition = "2021"
authors = [
    "Rich Challis <rc28@sanger.ac.uk>",
]
license = "MIT"
description = "Core utilities for BlobToolKit."
homepage = "https://github.com/blobtoolkit/blobtk"
repository = "https://github.com/blobtoolkit/blobtk"
documentation = "https://github.com/blobtoolkit/blobtk"
keywords = ["bioinformatics", "blobtoolkit", "genome", "genomics"]
categories = ["command-line-utilities", "science"]
include = [
    "Cargo.*",
    "pyproject.*",
    "src/*",
]

[lib]
name = "blobtk"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
atty = "0.2.14"
clap = { version = "4.0.29", features = [ "derive" ]}
flate2 = "1.0.25"
indexmap = "1.9.2"
indicatif = "0.17.2"
needletail = "0.5.0"
pyo3 = { version = "0.18.1", features = ["extension-module"] }
regex = "1.7.0"
rust-htslib = "0.40.2"
serde = { version = "1.0.152", features= ["derive"] }
serde_json = "1.0.93"
